--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   deploy:
-    Run-npm-on-Ubuntu:
-    runs-on: ubuntu-lasted
+    
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
