--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     
-    runs-on: ubuntu-lasted
+    runs-on: ubuntu-18.4
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
